feat: add forgot password feature and the swagger documentation (untested)
